Candidate List update

--- a/frontend/vote.html
+++ b/frontend/vote.html
@@ -34,13 +34,16 @@
         </div>
         <div class="candidate" id="cand2">
             <div class="candDetails">
-                <img src="images/candidate2.jpg" alt="">
-                <h2>Justine Krieger</h2>
-                <p>Justine Krieger is a software engineer with over 10 years of experience in the field. He is a strong
-                    advocate for diversity and inclusion in the workplace.</p>
+                <img src="https://media.licdn.com/dms/image/v2/D5603AQEqmqwPjPu1_A/profile-displayphoto-shrink_400_400/B56ZUfEMjDGoAg-/0/1739982949649?e=1770854400&v=beta&t=tx6VfZ_MYP5MwhUcGEuwkr5dmHKguxhxLGAblk6Kff4"
+                    alt="">
+                <h2>Chris Maria Shajan C</h2>
+                <p>Chris Maria Shajan C is a focused and dedicated second-year B.Tech CSE student at Christ College of
+                    Engineering, Thrissur. She is passionate about growing through consistent learning, with active
+                    interests in Data Analytics, AI-driven automation, and engineering innovations.</p>
             </div>
             <div class="candBtns">
-                <a href="https://www.linkedin.com/in/emilshain/" class="viewProfileBtn">View Profile</a>
+                <a href="https://www.linkedin.com/in/chris-maria-shajan-c-513940339/" class="viewProfileBtn">View
+                    Profile</a>
                 <a href="voters.html" class="voteBtn">Vote</a>
             </div>
         </div>
