--- a/frontend/login.html
+++ b/frontend/login.html
@@ -11,6 +11,7 @@
 <body class="loginBody">
     <div class="login">
         <div class="loginForm">
+            <img src="images/votely-logo.svg" alt="Votely Logo" class="logo">
             <h2>Login to Votely</h2>
             <form action="/login" method="post">
                 <div class="form-group">
