--- a/frontend/register.html
+++ b/frontend/register.html
@@ -11,6 +11,7 @@
 <body class="loginBody">
     <div class="login">
         <div class="loginForm">
+            <img src="images/votely-logo.svg" alt="Votely Logo" class="logo">
             <h2>Create an Account</h2>
             <form id="registerForm">
                 <div class="form-group">
