--- a/frontend/forgotPassword.html
+++ b/frontend/forgotPassword.html
@@ -11,6 +11,7 @@
 <body class="loginBody">
     <div class="login">
         <div class="loginForm">
+            <img src="images/votely-logo.svg" alt="Votely Logo" class="logo">
             <h2>Reset Password</h2>
             <form action="">
                 <div class="form-group">
