--- a/frontend/vote.html
+++ b/frontend/vote.html
@@ -10,8 +10,14 @@
 
 <body>
     <div class="navbar">
-        <span>User</span>
-        <button type="button" id="logoutBtn">Logout</button>
+        <div class="nav-brand">
+            <img src="images/votely-logo.svg" alt="Votely" class="nav-logo">
+            <span>Votely</span>
+        </div>
+        <div style="display: flex; align-items: center; gap: 15px;">
+            <span>User</span>
+            <button type="button" id="logoutBtn">Logout</button>
+        </div>
     </div>
 
     <h1>Cast your vote</h1>
