--- a/frontend/login.html
+++ b/frontend/login.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Votely - Login</title>
+    <link rel="icon" type="image/svg+xml" href="images/votely-logo.svg">
     <link rel="stylesheet" href="styles.css">
 </head>
 
